[tool.poetry]
name = "convertertest"
version = "0.1.0"
description = ""
authors = ["romaintailhurat <romain.tailhurat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sdmx2json-ld = "^0.5.1"
prefect = "^2.6.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
